--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.drippinger</groupId>
@@ -42,6 +41,7 @@
 
         <assertj-core.version>3.10.0</assertj-core.version>
         <byte-buddy.version>1.9.1</byte-buddy.version>
+        <javafaker.version>0.16</javafaker.version>
         <junit-jupiter.version>5.3.1</junit-jupiter.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.18.0</lombok.version>
