--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,6 @@ language: java
 script: ./mvnw clean test jacoco:report coveralls:report
 notifications:
   email: false
+cache:
+  directories:
+  - $HOME/.m2
