--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 
         <assertj-core.version>3.10.0</assertj-core.version>
         <byte-buddy.version>1.9.1</byte-buddy.version>
+        <commons-lang3.version>3.5</commons-lang3.version>
         <javafaker.version>0.16</javafaker.version>
         <junit-jupiter.version>5.3.1</junit-jupiter.version>
         <junit.version>4.12</junit.version>
