Added source Directory to allows coveralls to find generated file
We'll see if this will also effect the coverage of the new module. The generated Immutables classes are marked as generated and should not be relevant for JaCoCo, at least with 2.7.1 https://github.com/immutables/immutables/issues/792.

--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
                 <configuration>
-                    <scanForSources>true</scanForSources>
+                    <sourceDirectories>test-immutables/target/generated-sources/annotations/</sourceDirectories>
                 </configuration>
             </plugin>
             <plugin>
@@ -94,6 +94,7 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
+
                 </executions>
             </plugin>
         </plugins>
