--- a/pom.xml
+++ b/pom.xml
@@ -79,9 +79,6 @@
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
                 <version>4.3.0</version>
-                <configuration>
-                    <sourceDirectories>test-immutables/target/generated-sources/annotations/</sourceDirectories>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
@@ -94,8 +91,12 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-
                 </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**/immutables/*</exclude>
+                    </excludes>
+                </configuration>
             </plugin>
         </plugins>
     </build>
