Create general module for generator frameworks
Moved Immutables builder test to that new generators module

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <module>fakegen-junit4</module>
         <module>fakegen-junit5</module>
         <module>fakegen-benchmark</module>
-        <module>test-immutables</module>
+        <module>generators</module>
     </modules>
 
     <properties>
