--- a/generators/immutables/pom.xml
+++ b/generators/immutables/pom.xml
@@ -2,13 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>fakegen</artifactId>
+        <artifactId>generators</artifactId>
         <groupId>de.drippinger</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>test-immutables</artifactId>
-    <name>Fakegen :: Test :: Immutables</name>
+    <artifactId>immutables</artifactId>
+
+    <name>Fakegen :: Generators :: Immutables</name>
 
     <dependencies>
         <dependency>
