--- a/generators/pom.xml
+++ b/generators/pom.xml
@@ -14,6 +14,7 @@
     <name>Fakegen :: Generators</name>
     <modules>
         <module>immutables</module>
+        <module>autovalue</module>
     </modules>
 
 </project>
