Missing JaCoCo ignore command

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,7 @@
                 <configuration>
                     <excludes>
                         <exclude>**/immutables/*</exclude>
+                        <exclude>**/autovalue/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
