--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: java
+
+jdk:
+  - openjdk8
+  - openjdk11
+
 script: ./mvnw clean test jacoco:report coveralls:report
+
 notifications:
   email: false
+
 cache:
   directories:
   - $HOME/.m2
