--- a/generators/pom.xml
+++ b/generators/pom.xml
@@ -12,9 +12,24 @@
 
     <packaging>pom</packaging>
     <name>Fakegen :: Generators</name>
+
     <modules>
         <module>immutables</module>
         <module>autovalue</module>
+        <module>freebuilder</module>
     </modules>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
