--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
         <assertj-core.version>3.11.1</assertj-core.version>
         <byte-buddy.version>1.9.2</byte-buddy.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
+        <freebuilder.version>1.14.9</freebuilder.version>
         <javafaker.version>0.16</javafaker.version>
         <junit-jupiter.version>5.3.1</junit-jupiter.version>
         <junit.version>4.12</junit.version>
@@ -97,6 +98,7 @@
                     <excludes>
                         <exclude>**/immutables/*</exclude>
                         <exclude>**/autovalue/*</exclude>
+                        <exclude>**/freebuilder/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
