--- a/generators/immutables/pom.xml
+++ b/generators/immutables/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.immutables</groupId>
             <artifactId>value</artifactId>
-            <version>2.7.1</version>
+            <version>${immutables.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
