--- a/pom.xml
+++ b/pom.xml
@@ -42,9 +42,11 @@
         <?SORTPOM RESUME?>
 
         <assertj-core.version>3.11.1</assertj-core.version>
+        <auto-value.version>1.6.2</auto-value.version>
         <byte-buddy.version>1.9.2</byte-buddy.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <freebuilder.version>1.14.9</freebuilder.version>
+        <immutables.version>2.7.1</immutables.version>
         <javafaker.version>0.16</javafaker.version>
         <junit-jupiter.version>5.3.1</junit-jupiter.version>
         <junit.version>4.12</junit.version>
