Added Builder Support for Lombok.
Since the actual builder class file is not available within the IDE, we use the already provided builder instance.

--- a/generators/pom.xml
+++ b/generators/pom.xml
@@ -17,6 +17,7 @@
         <module>immutables</module>
         <module>autovalue</module>
         <module>freebuilder</module>
+        <module>lombok</module>
     </modules>
 
     <build>
