--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-script: ./mvnw clean test jacoco:report coveralls:report
+script: ./mvnw clean test javadoc:javadoc jacoco:report coveralls:report
 notifications:
   email: false
 cache:
