--- a/fakegen-junit5/pom.xml
+++ b/fakegen-junit5/pom.xml
@@ -50,7 +50,15 @@
             <version>1.3.1</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.1</version>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
