--- a/pom.xml
+++ b/pom.xml
@@ -52,12 +52,20 @@
         <auto-value.version>1.6.2</auto-value.version>
         <byte-buddy.version>1.9.3</byte-buddy.version>
         <commons-lang3.version>3.8.1</commons-lang3.version>
+        <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
         <freebuilder.version>1.14.9</freebuilder.version>
         <immutables.version>2.7.1</immutables.version>
+        <jacoco-maven-plugin.version>0.8.2</jacoco-maven-plugin.version>
         <javafaker.version>0.16</javafaker.version>
         <junit-jupiter.version>5.3.1</junit-jupiter.version>
+        <junit-platform-engine.version>1.3.1</junit-platform-engine.version>
         <junit.version>4.12</junit.version>
         <lombok.version>1.18.4</lombok.version>
+        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
+        <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
+        <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
+        <reflections.version>0.9.11</reflections.version>
+        <sortpom-maven-plugin.version>2.10.0</sortpom-maven-plugin.version>
         <system-rules.version>1.18.0</system-rules.version>
     </properties>
 
@@ -66,7 +74,7 @@
             <plugin>
                 <groupId>com.github.ekryd.sortpom</groupId>
                 <artifactId>sortpom-maven-plugin</artifactId>
-                <version>2.10.0</version>
+                <version>${sortpom-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>test</phase>
@@ -87,14 +95,18 @@
                 </configuration>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+            <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.3.0</version>
+                <version>${coveralls-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.2</version>
+                <version>${jacoco-maven-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
@@ -103,13 +115,6 @@
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <excludes>
-                        <exclude>**/immutables/*</exclude>
-                        <exclude>**/autovalue/*</exclude>
-                        <exclude>**/freebuilder/*</exclude>
-                    </excludes>
-                </configuration>
             </plugin>
         </plugins>
     </build>
