--- a/fakegen-benchmark/pom.xml
+++ b/fakegen-benchmark/pom.xml
@@ -16,6 +16,7 @@
         <javac.target>1.8</javac.target>
         <jmh-profilers.version>0.1.4</jmh-profilers.version>
         <jmh.version>1.21</jmh.version>
+        <mockito-core.version>2.8.9</mockito-core.version>
         <uberjar.name>benchmarks</uberjar.name>
     </properties>
 
@@ -29,6 +30,11 @@
             <groupId>de.drippinger</groupId>
             <artifactId>fakegen-core</artifactId>
             <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
