--- a/fakegen-core/pom.xml
+++ b/fakegen-core/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>de.drippinger</groupId>
-        <artifactId>fakegen</artifactId>
+        <groupId>de.drippinger.fakegen</groupId>
+        <artifactId>fakegen-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
