--- a/generators/pom.xml
+++ b/generators/pom.xml
@@ -3,8 +3,8 @@
 
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>de.drippinger</groupId>
-        <artifactId>fakegen</artifactId>
+        <groupId>de.drippinger.fakegen</groupId>
+        <artifactId>fakegen-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
