Auto Version of submodules

--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,7 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
                     <tagNameFormat>fakegen-@{project.version}</tagNameFormat>
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
