--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,8 @@
     <packaging>pom</packaging>
 
     <name>Fakegen-Parent</name>
+    <description>A test library to fill an object graph with random data</description>
+    <url>https://github.com/DennisRippinger/fakegen</url>
     <inceptionYear>2018</inceptionYear>
 
     <licenses>
