--- a/fakegen-core/pom.xml
+++ b/fakegen-core/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.drippinger.fakegen</groupId>
         <artifactId>fakegen-parent</artifactId>
-        <version>0.2</version>
+        <version>0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>fakegen-core</artifactId>
