--- a/generators/lombok/pom.xml
+++ b/generators/lombok/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>de.drippinger.fakegen</groupId>
         <artifactId>generators</artifactId>
-        <version>0.2</version>
+        <version>0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>lombok</artifactId>
