--- a/generators/pom.xml
+++ b/generators/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>de.drippinger.fakegen</groupId>
         <artifactId>fakegen-parent</artifactId>
-        <version>0.2</version>
+        <version>0.3-SNAPSHOT</version>
     </parent>
 
     <artifactId>generators</artifactId>
