--- a/generators/immutables/pom.xml
+++ b/generators/immutables/pom.xml
@@ -11,6 +11,10 @@
 
     <name>Fakegen :: Generators :: Immutables</name>
 
+    <properties>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>de.drippinger.fakegen</groupId>
