--- a/generators/freebuilder/pom.xml
+++ b/generators/freebuilder/pom.xml
@@ -10,6 +10,10 @@
     <artifactId>freebuilder</artifactId>
     <name>Fakegen :: Generators :: Freebuilder</name>
 
+    <properties>
+        <maven.javadoc.skip>true</maven.javadoc.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>de.drippinger.fakegen</groupId>
