--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,3 +21,12 @@ jobs:
                   cache: maven
             - name: Build with Maven
               run: mvn -B package --file pom.xml
+    finish:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - name: Coveralls Finished
+              uses: coverallsapp/github-action@master
+              with:
+                  github-token: ${{ secrets.github_token }}
+                  parallel-finished: true
