--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <sonar.organization>dennisrippinger</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+        <sonar.coverage.jacoco.xmlReportPaths>../fakegen-core/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
         <?SORTPOM RESUME?>
 
         <assertj-core.version>3.12.2</assertj-core.version>
@@ -75,7 +76,7 @@
         <commons-lang3.version>3.8.1</commons-lang3.version>
         <freebuilder.version>2.3.0</freebuilder.version>
         <immutables.version>2.7.5</immutables.version>
-        <jacoco-maven-plugin.version>0.8.4</jacoco-maven-plugin.version>
+        <jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
         <javafaker.version>0.18</javafaker.version>
         <junit-jupiter.version>5.4.2</junit-jupiter.version>
         <junit-platform-engine.version>1.4.0</junit-platform-engine.version>
@@ -184,15 +185,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco-maven-plugin.version}</version>
-                <configuration>
-                    <destFile>${project.basedir}/../target/jacoco.exec</destFile>
-                    <append>true</append>
-                </configuration>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
                         <goals>
                             <goal>prepare-agent</goal>
+                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
