--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: CI
 
 on:
     push:
@@ -19,12 +19,6 @@ jobs:
                   java-version: '11'
                   distribution: 'temurin'
                   cache: maven
-            -   name: Cache SonarCloud packages
-                uses: actions/cache@v1
-                with:
-                    path: ~/.sonar/cache
-                    key: ${{ runner.os }}-sonar
-                    restore-keys: ${{ runner.os }}-sonar
             - name: Build with Maven
               env:
                 GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
